# EnergyScope_open

./: .gitignore  .gitlab-ci.yml  AMPL_LINOPY_COMPARISON.md  CONTINUE_FROM_HERE.md  ESTD_main.run  ESTD_main_light.run  FILES_CREATED.md  FINAL_STATUS.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_COMPLETE.txt  LICENSE  LINOPY_IMPLEMENTATION_SUMMARY.md  LINOPY_README.md  LINOPY_STATUS.md  LINOPY_TODO.md  MODEL_STATUS.md  PERFORMANCE_OPTIMIZATION.md  PHASE3_PLAN.md  PYOPTINTERFACE_STATUS.md  README.md  README_LINOPY.md  SESSION_FINAL_REPORT.md  SESSION_SUMMARY.md  START_HERE.md  STRATEGY_AND_IMPLEMENTATION_COMPLETE.md  TESTING_RESULTS.md  TRANSFORMATION_SUMMARY.txt  VALIDATION_COMPLETE.md  core-run.ipynb  hatch.toml  mkdocs.yml  pyproject.toml
docs/: ampl_vs_linopy_comparison.md  gallery_conf.py  index.md  linopy_migration_strategy.md  linopy_quickstart.md
docs/ampl/: index.md  (+3 more)
scripts/: ampl_model.py  amplpy_model.py  compute_iis.py  gen_ref_nav.py  linopy_core_model_xarray.py  linopy_full_model.py  linopy_model.py  linopy_toy_model.py  pyoptinterface_core.py  pyoptinterface_core_model.py  pyoptinterface_full.py  pyoptinterface_full_model.py  pyoptinterface_nostorage.py  pyoptinterface_toy.py  pyoptinterface_toy_model.py  python_model.py  test_all_groups.py  test_ampl_toy_model.py  test_build_core_model.py  test_core_complete.py  test_core_full.py  test_core_group1.py  test_core_groups_1to5.py  test_core_gurobi.py  test_core_model_v1.py  test_pyoptinterface.py  test_pyoptinterface_highs.py  test_toy_model_comparison.py
tests/: README.md  test_linopy_toy_model.py
(+163 files in other folders)
