[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "energyscope"
keywords = ["energy", "energy system", "modeling", "analysis"]
dynamic = ['version']
authors = [
    { name = "Jonas Schnidrig", email = "jonas.schnidrig@hevs.ch" },
    { name = "Arthur Chuat", email = "arthur.chuat@epfl.ch" },
    { name = "Cyrille Platteau", email = "cyrille.platteau@epfl.ch" },
]
maintainers = [
    { name = "IPESE IT", email = "it.ipese@epfl.ch" },
]
description = "Energy system modeling and analysis."

readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0.0,<3.0.0",
    "amplpy>=0.14.0,<1.0.0",
    "numpy>=2.0.0,<3.0.0",
    "pandas>=2.0.0,<3.0.0",
    "plotly>=5.24.0,<7.0.0",
    "SALib>=1.5.0,<2.0.0",
    "seaborn>=0.13.0,<1.0.0",
    "nbformat>=5.10.0,<6.0.0",
    "amplpy>=0.14.0,<1.0.0",
    "ipywidgets>=8.1.7,<9.0.0"

]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
ampl_modules = [
    "ampl_module_base",
    "ampl_module_highs",
]

[project.urls]
Homepage = "https://library.energyscope.ch"
Repository = "https://gitlab.com/energyscope/energyscope"
Issues = "https://gitlab.com/energyscope/energyscope/-/issues"
